Implementata la Bussiness per la gestione del cancellini

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,16 @@
 	<artifactId>Uol2010Utility</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
 	<modules>
 		<module>Uol2010ValidazioneUtenti</module>
 		<module>Uol2010GestioneXsd</module>
 		<module>Uol2010Crypting</module>
+		<module>Uol2010BusinessLogic</module>
 	</modules>
 	<repositories>
 		<repository>
