--- a/Uol2010Crypting/pom.xml
+++ b/Uol2010Crypting/pom.xml
@@ -10,9 +10,9 @@
 	<artifactId>Uol2010Crypting</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.1</version>
 		</dependency>
 	</dependencies>
 	<repositories>
@@ -70,5 +70,5 @@
 			</resource>
 		</resources>
 	</build>
-	<version>1.0.2</version>
+	<version>2.0.0</version>
 </project>
