--- a/Uol2010BusinessLogic/pom.xml
+++ b/Uol2010BusinessLogic/pom.xml
@@ -3,16 +3,16 @@
   <parent>
     <groupId>net.bncf.uol2010.utility</groupId>
     <artifactId>Uol2010Utility</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version><!-- 1.0.0 -->
   </parent>
   <groupId>net.bncf.uol2010.businessLogin</groupId>
   <artifactId>Uol2010BusinessLogic</artifactId>
+  <version>1.0.4</version><!-- 1.0.3 -->
   <dependencies>
   	<dependency>
   		<groupId>net.bncf.uol2010.database.schema</groupId>
   		<artifactId>Uol2010DatabaseSchema</artifactId>
-  		<version>1.0.3</version>
+  		<version>2.0.3</version><!-- 1.0.3 -->
   	</dependency>
   </dependencies>
-  <version>1.0.3</version>
 </project>
