--- a/Uol2010GestioneXsd/pom.xml
+++ b/Uol2010GestioneXsd/pom.xml
@@ -4,22 +4,24 @@
 	<parent>
 		<groupId>net.bncf.uol2010.utility</groupId>
 		<artifactId>Uol2010Utility</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1</version><!-- 1.0.0 -->
 	</parent>
 	<groupId>net.bncf.uol2010.utility.xsd</groupId>
 	<artifactId>Uol2010GestioneXsd</artifactId>
+	<version>2.0.2</version><!-- 2.0.1 -->
 	<dependencies>
 		<dependency>
 			<groupId>net.bncf.uol2010.utility.crypting</groupId>
 			<artifactId>Uol2010Crypting</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1</version><!-- 2.0.0 -->
 		</dependency>
 		<dependency>
 			<groupId>mx.randalf.xsd</groupId>
 			<artifactId>RandalfXsd</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.2</version><!-- 2.0.1 -->
 		</dependency>
 	</dependencies>
+<!-- 
 	<repositories>
 		<repository>
 			<id>bncf</id>
@@ -59,6 +61,7 @@
 			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
+ -->	
 	<build>
 		<resources>
 			<resource>
@@ -75,5 +78,4 @@
 			</resource>
 		</resources>
 	</build>
-	<version>2.0.1</version>
 </project>
