--- a/Uol2010Utils/pom.xml
+++ b/Uol2010Utils/pom.xml
@@ -3,15 +3,17 @@
   <parent>
     <groupId>net.bncf.uol2010.utility</groupId>
     <artifactId>Uol2010Utility</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version><!-- 1.0.0 -->
   </parent>
   <groupId>net.bncf.uol2010.utility.utils</groupId>
   <artifactId>Uol2010Utils</artifactId>
+  <version>1.0.3</version><!-- 1.0.2 -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source><!-- 1.7 -->
+		<maven.compiler.target>1.8</maven.compiler.target><!-- 1.7 -->
 	</properties>
+<!-- 	
 	<distributionManagement>
 		<repository>
 			<id>mvn-bncf</id>
@@ -28,22 +30,30 @@
 			</snapshots>
 		</repository>
 	</repositories>
+ -->	
   <dependencies>
   	<dependency>
   		<groupId>javax.mail</groupId>
   		<artifactId>mail</artifactId>
   		<version>1.5.0-b01</version>
   	</dependency>
+<!-- 
   	<dependency>
   		<groupId>log4j</groupId>
   		<artifactId>log4j</artifactId>
   		<version>1.2.17</version>
   	</dependency>
+ -->  	
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+    <version>2.15.0</version>
+  </dependency>		
+  	
   	<dependency>
   		<groupId>mx.randalf.converter.text</groupId>
   		<artifactId>RandalfConverterText</artifactId>
-  		<version>1.0.2</version>
+  		<version>2.0.1</version><!-- 1.0.2 -->
   	</dependency>
   </dependencies>
-  <version>1.0.2</version>
 </project>
