--- a/Uol2010ValidazioneUtenti/pom.xml
+++ b/Uol2010ValidazioneUtenti/pom.xml
@@ -4,30 +4,31 @@
 	<parent>
 		<groupId>net.bncf.uol2010.utility</groupId>
 		<artifactId>Uol2010Utility</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1</version><!-- 1.0.0 -->
 	</parent>
 	<groupId>net.bncf.uol2010.utility.validate.user</groupId>
 	<artifactId>Uol2010ValidazioneUtenti</artifactId>
+	<version>2.0.3</version><!-- 2.0.2 -->
 	<dependencies>
 		<dependency>
 			<groupId>net.bncf.uol2010.utility.xsd</groupId>
 			<artifactId>Uol2010GestioneXsd</artifactId>
-			<version>2.0.1</version>
+			<version>2.0.2</version><!-- 2.0.1 -->
 		</dependency>
 		<dependency>
 			<groupId>mx.randalf.tools</groupId>
 			<artifactId>RandalfTools</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1</version><!-- 2.0.0 -->
 		</dependency>
 		<dependency>
 			<groupId>net.bncf.uol2010.database.schema</groupId>
 			<artifactId>Uol2010DatabaseSchema</artifactId>
-			<version>2.0.2</version>
+			<version>2.0.3</version><!-- 2.0.2 -->
 		</dependency>
 		<dependency>
 			<groupId>mx.randalf.moduli.servlet.core</groupId>
 			<artifactId>RandalfServletXslCore</artifactId>
-			<version>2.0.0</version>
+			<version>2.0.1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -36,6 +37,7 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
+<!-- 	
 	<repositories>
 		<repository>
 			<id>bncf</id>
@@ -75,7 +77,8 @@
 			<url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
 		</repository>
 	</distributionManagement>
-	<build>
+ -->
+ 	<build>
 		<resources>
 			<resource>
 				<directory>${basedir}/src/main/java</directory>
@@ -91,5 +94,4 @@
 			</resource>
 		</resources>
 	</build>
-	<version>2.0.2</version>
 </project>
