--- a/Uol2010Crypting/pom.xml
+++ b/Uol2010Crypting/pom.xml
@@ -13,7 +13,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.15.0</version><!-- 2.13.1 -->
+			<version>2.17.1</version>
 		</dependency>
 	</dependencies>
 <!-- 
